@@ -6,15 +6,11 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.BiConsumer;
 
 import org.jabref.gui.externalfiletype.ExternalFileType;
 import org.jabref.gui.externalfiletype.ExternalFileTypes;
 import org.jabref.gui.externalfiletype.UnknownExternalFileType;
-import org.jabref.gui.undo.NamedCompound;
-import org.jabref.gui.undo.UndoableFieldChange;
-import org.jabref.gui.util.DefaultTaskExecutor;
-import org.jabref.logic.bibtex.FileFieldWriter;
 import org.jabref.logic.util.io.AutoLinkPreferences;
 import org.jabref.logic.util.io.FileFinder;
 import org.jabref.logic.util.io.FileFinders;
@@ -22,7 +18,6 @@ import org.jabref.logic.util.io.FileUtil;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
-import org.jabref.model.entry.field.StandardField;
 import org.jabref.preferences.FilePreferences;
 
 import org.slf4j.Logger;
@@ -52,6 +47,7 @@ public class AutoSetFileLinksUtil {
     }
 
     private static final Logger LOGGER = LoggerFactory.getLogger(AutoSetFileLinksUtil.class);
+
     private final List<Path> directories;
     private final AutoLinkPreferences autoLinkPreferences;
     private final FilePreferences filePreferences;
@@ -66,7 +62,7 @@ public class AutoSetFileLinksUtil {
         this.filePreferences = filePreferences;
     }
 
-    public LinkFilesResult linkAssociatedFiles(List<BibEntry> entries, NamedCompound ce) {
+    public LinkFilesResult linkAssociatedFiles(List<BibEntry> entries, BiConsumer<LinkedFile, BibEntry> onAddLinkedFile) {
         LinkFilesResult result = new LinkFilesResult();
 
         for (BibEntry entry : entries) {
@@ -79,26 +75,12 @@ public class AutoSetFileLinksUtil {
                 LOGGER.error("Problem finding files", e);
             }
 
-            if (ce != null) {
-                boolean changed = false;
-
-                for (LinkedFile linkedFile : linkedFiles) {
-                    // store undo information
-                    String newVal = FileFieldWriter.getStringRepresentation(linkedFile);
-                    String oldVal = entry.getField(StandardField.FILE).orElse(null);
-                    UndoableFieldChange fieldChange = new UndoableFieldChange(entry, StandardField.FILE, oldVal, newVal);
-                    ce.addEdit(fieldChange);
-                    changed = true;
-
-                    DefaultTaskExecutor.runInJavaFXThread(() -> {
-                        entry.addFile(linkedFile);
-                    });
-                }
-
-                if (changed) {
-                    result.addBibEntry(entry);
-                }
+            for (LinkedFile linkedFile : linkedFiles) {
+                // store undo information
+                onAddLinkedFile.accept(linkedFile, entry);
             }
+
+            result.addBibEntry(entry);
         }
         return result;
     }
@@ -106,7 +88,9 @@ public class AutoSetFileLinksUtil {
     public List<LinkedFile> findAssociatedNotLinkedFiles(BibEntry entry) throws IOException {
         List<LinkedFile> linkedFiles = new ArrayList<>();
 
-        List<String> extensions = filePreferences.getExternalFileTypes().stream().map(ExternalFileType::getExtension).collect(Collectors.toList());
+        List<String> extensions = filePreferences.getExternalFileTypes().stream().map(ExternalFileType::getExtension).toList();
+
+        LOGGER.debug("Searching for extensions {} in directories {}", extensions, directories);
 
         // Run the search operation
         FileFinder fileFinder = FileFinders.constructFromConfiguration(autoLinkPreferences);
@@ -134,6 +118,7 @@ public class AutoSetFileLinksUtil {
                 Path relativeFilePath = FileUtil.relativize(foundFile, directories);
                 LinkedFile linkedFile = new LinkedFile("", relativeFilePath, strType);
                 linkedFiles.add(linkedFile);
+                LOGGER.debug("Found file {} for entry {}", linkedFile, entry.getCitationKey());
             }
         }
 
