@@ -51,7 +51,7 @@ public class AttachFileFromURLAction extends SimpleCommand {
 
         BibDatabaseContext databaseContext = stateManager.getActiveDatabase().get();
 
-        BibEntry entry = stateManager.getSelectedEntries().get(0);
+        BibEntry entry = stateManager.getSelectedEntries().getFirst();
 
         Optional<String> urlforDownload = getUrlForDownloadFromClipBoardOrEntry(dialogService, entry);
 
