@@ -15,13 +15,13 @@ import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.identifier.DOI;
 
-import kong.unirest.HttpResponse;
-import kong.unirest.JsonNode;
-import kong.unirest.Unirest;
-import kong.unirest.UnirestException;
-import kong.unirest.json.JSONArray;
-import kong.unirest.json.JSONException;
-import kong.unirest.json.JSONObject;
+import kong.unirest.core.HttpResponse;
+import kong.unirest.core.JsonNode;
+import kong.unirest.core.Unirest;
+import kong.unirest.core.UnirestException;
+import kong.unirest.core.json.JSONArray;
+import kong.unirest.core.json.JSONException;
+import kong.unirest.core.json.JSONObject;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Node;
@@ -108,9 +108,9 @@ public class ScienceDirect implements FulltextFetcher, CustomizableKeyFetcher {
             JSONObject urlMetadata = pdfDownload.getJSONObject("urlMetadata");
             JSONObject queryParamsObject = urlMetadata.getJSONObject("queryParams");
             String queryParameters = queryParamsObject.keySet().stream()
-                                                      .map(key -> String.format("%s=%s", key, queryParamsObject.getString(key)))
+                                                      .map(key -> "%s=%s".formatted(key, queryParamsObject.getString(key)))
                                                       .collect(Collectors.joining("&"));
-            fullLinkToPdf = String.format("https://www.sciencedirect.com/%s/%s%s?%s",
+            fullLinkToPdf = "https://www.sciencedirect.com/%s/%s%s?%s".formatted(
                     urlMetadata.getString("path"),
                     urlMetadata.getString("pii"),
                     urlMetadata.getString("pdfExtension"),
@@ -150,7 +150,7 @@ public class ScienceDirect implements FulltextFetcher, CustomizableKeyFetcher {
 
             for (int i = 0; i < links.length(); i++) {
                 JSONObject link = links.getJSONObject(i);
-                if (link.getString("@rel").equals("scidir")) {
+                if ("scidir".equals(link.getString("@rel"))) {
                     sciLink = link.getString("@href");
                 }
             }
