@@ -10,7 +10,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.jabref.logic.util.OS;
@@ -30,15 +29,16 @@ public class OpenOfficeFileSearch {
     public static List<Path> detectInstallations() {
         if (OS.WINDOWS) {
             List<Path> programDirs = findWindowsOpenOfficeDirs();
-            return programDirs.stream().filter(dir -> FileUtil.find(OpenOfficePreferences.WINDOWS_EXECUTABLE, dir).isPresent()).collect(Collectors.toList());
+            return programDirs.stream().filter(dir -> FileUtil.find(OpenOfficePreferences.WINDOWS_EXECUTABLE, dir).isPresent()).toList();
         } else if (OS.OS_X) {
             List<Path> programDirs = findOSXOpenOfficeDirs();
-            return programDirs.stream().filter(dir -> FileUtil.find(OpenOfficePreferences.OSX_EXECUTABLE, dir).isPresent()).collect(Collectors.toList());
+            return programDirs.stream().filter(dir -> FileUtil.find(OpenOfficePreferences.OSX_EXECUTABLE, dir).isPresent()).toList();
         } else if (OS.LINUX) {
             List<Path> programDirs = findLinuxOpenOfficeDirs();
-            return programDirs.stream().filter(dir -> FileUtil.find(OpenOfficePreferences.LINUX_EXECUTABLE, dir).isPresent()).collect(Collectors.toList());
+            return programDirs.stream().filter(dir -> FileUtil.find(OpenOfficePreferences.LINUX_EXECUTABLE, dir).isPresent()).toList();
+        } else {
+            return List.of();
         }
-        return new ArrayList<>(0);
     }
 
     private static List<Path> findOpenOfficeDirectories(List<Path> programDirectories) {
@@ -46,14 +46,16 @@ public class OpenOfficeFileSearch {
                 attr.isDirectory() && (path.toString().toLowerCase(Locale.ROOT).contains("openoffice")
                         || path.toString().toLowerCase(Locale.ROOT).contains("libreoffice"));
 
-        return programDirectories.stream().flatMap(dirs -> {
-            try {
-                return Files.find(dirs, 1, filePredicate);
-            } catch (IOException e) {
-                LOGGER.error("Problem searching for openoffice/libreoffice install directory", e);
-                return Stream.empty();
-            }
-        }).collect(Collectors.toList());
+        return programDirectories.stream()
+                                 .flatMap(dirs -> {
+                                     try {
+                                         return Files.find(dirs, 1, filePredicate);
+                                     } catch (IOException e) {
+                                         LOGGER.error("Problem searching for openoffice/libreoffice install directory", e);
+                                         return Stream.empty();
+                                     }
+                                 })
+                                 .toList();
     }
 
     private static List<Path> findWindowsOpenOfficeDirs() {
@@ -71,7 +73,11 @@ public class OpenOfficeFileSearch {
             sourceList.add(Path.of(progFiles));
         }
 
-        return findOpenOfficeDirectories(sourceList);
+        return findOpenOfficeDirectories(sourceList)
+                .stream()
+                // On Windows, the executable is nested in subdirectory "program"
+                .map(dir -> dir.resolve("program"))
+                .toList();
     }
 
     private static List<Path> findOSXOpenOfficeDirs() {
